--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,7 +4,7 @@ body {
     line-height: 1;
   }
   
-  textarea{
+  textarea {
     background: transparent;
     border: none;
     resize: none;
@@ -33,18 +33,20 @@ body {
   .row {
     white-space: pre-wrap;
     height: 80px;
-    border-top: 1px solid white;;
+    border-top: 1px solid white;
   }
   
   .hour {
     background-color: #ffffff;
     color: #000000;
     border-top: 1px dashed #000000;
+    width: 80px;
   }
   
   .past {
     background-color: #d3d3d3;
     color: white;
+    width: 50%;
   }
   
   .present {
@@ -63,6 +65,7 @@ body {
     border-bottom-right-radius: 15px;
     background-color: #06AED5;
     color: white;
+    width: 80px;
   }
   
   .saveBtn i:hover {
