--- a/assets/styles.css
+++ b/assets/styles.css
@@ -47,17 +47,17 @@ body {
   }
   
   .past {
-    background-color: #d3d3d3;
+    background-image: linear-gradient(#6f7074, #939497);
     color: white;
   }
   
   .present {
-    background-color: #ff6961;
+    background-image: linear-gradient(#700707, #850f0f);
     color: white;
   }
   
   .future {
-    background-color: #77dd77;
+    background-image: linear-gradient(#084618, #0e5a1e);
     color: white;
   }
   
@@ -65,7 +65,16 @@ body {
     border-left: 1px solid black;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    background-color: #06AED5;
+    background-image: linear-gradient(#0b3d75, #4563a3);
+    color: white;
+    width: 80px;
+  }
+
+  .altered {
+    border-left: 1px solid black;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-image: linear-gradient(#095bb9, #5e85db);
     color: white;
     width: 80px;
   }
@@ -77,6 +86,11 @@ body {
  }
   
   .saveBtn i:hover {
+    font-size: 20px;
+    transition: all .3s ease-in-out;
+  }
+
+  .altered i:hover {
     font-size: 20px;
     transition: all .3s ease-in-out;
   }
